# new-technology-haskell

./: README.md  haskell.pptx
code/tests/: cycle.hs  div.hs  double.hs  drop.hs  elem.hs  fac.hs  fst.hs  head.hs  if.hs  index.hs  init.hs  io.hs  last.hs  length.hs  lists.hs  map.hs  maximum.hs  minmax.hs  null.hs  pow.hs  print.hs  product.hs  reverse.hs  succ.hs  sum.hs  tail.hs  take.hs
project/: cabal.sandbox.config  todo.cabal
