name:                todo
version:             0.0.1
synopsis:            My awesome todo-list app
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Aditya Bhargava
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             Main.hs
  -- other-modules:
  build-depends:     wai
                     , warp
                     , http-types
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time